--- a/style.css
+++ b/style.css
@@ -26,10 +26,94 @@
 a , .page:visited {
     color: black;
 }
+.loading-wrapper {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    background-color: hsla(0,0%,100%,.9);
+    animation: load-wrap .01s;
+    animation-delay: 1.75s;
+    animation-fill-mode: both;
+    z-index: 10000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.loading {
+    transform: translate(-50%-50%);
+    height: 40px;
+    display: flex;
+    align-items: center;
+    width: 100px;
+    height: 40px;
+}
+.obj {
+    width: 6px;
+    height: 40px;
+    background-color:#9356DC;
+    margin:  0 3px;
+    border-radius: 10px;
+    animation: loader 0.8s infinite;
+}
+.obj:nth-child(2) {
+    animation-delay: 0.1s;
+    background-color: #FF79DA;
+}
+.obj:nth-child(3) {
+    animation-delay: 0.2s;
+    background-color: #99E2D0;
+}
+.obj:nth-child(4) {
+    animation-delay: 0.3s;
+}
+.obj:nth-child(5) {
+    animation-delay: 0.4s;
+    background-color: #FF79DA;
+}
+.obj:nth-child(6) {
+    animation-delay: 0.5s;
+    background-color: #99E2D0;
+}
+.obj:nth-child(7) {
+    animation-delay: 0.6s;
+    background-color: #FF79DA;
+}
+.obj:nth-child(8) {
+    animation-delay: 0.7s;
+}
+
+@keyframes loader {
+    0% {
+        height: 0;
+    }
+
+    50% {
+        height: 40px;
+    }
+
+    100% {
+        height: 0;
+    }
+    
+}
+@keyframes load-wrap {
+    0%{
+        opacity: 100%;
+        background: rgba(255, 255, 255, 0.432);
+        
+    }
+    100%{
+        opacity: 0;
+        z-index: -10;
+    }
+}
+
 
 #main-container {
     width: 100%;
-    height: auto;
+    height: 100%;
     margin: 0 auto;
     max-width: 1920px;
 }
@@ -57,7 +141,6 @@ header {
     align-items: center;
     box-shadow: 0px -2px 6px grey;
 }
-
 .fa-map-marker-alt {
     margin-right: 12px;
     color: #353535;
@@ -65,6 +148,12 @@ header {
 .place-text {
     color: #353535;
     font-weight: 600;
+    border: none ;
+    outline: none;
+    font-size: 100%;
+    font-weight: 650;
+    color: #353535;
+    background-color: #DEDEDE;
 }
 .search-container{
     background-color: #F6F6F6;
@@ -108,14 +197,33 @@ header {
 .purple-btn {
     margin-top: 25px;
     color: white;
-    background: rgb(157,0,182);
-    background: linear-gradient(325deg, rgba(157,0,182,1) 0%, rgba(255,190,237,1) 100%);
+    background: rgb(144,0,208);
+    background: linear-gradient(0deg, rgba(144,0,208,1) 0%, rgba(171,0,176,1) 48%, rgba(255,51,222,1) 100%); 
     width: 300px;
     height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 35px;
+    transition: 0.2s;
+    box-shadow: 0px 3px 5px gray;
+}
+.purple-btn:hover {
+    background: linear-gradient(0deg, rgba(144,0,208,1) 0%, rgba(171,0,176,1) 48%, rgba(255,51,222,1) 100%); 
+    transform: scale(1.05);
+    box-shadow: 0px 4px 5px rgb(77, 77, 77);
+}
+.purple-btn::after {
+    content: '';
+    width: 300px;
+    height: 60px;
+    background-color: transparent;
+    position: absolute;
+    border-radius: 35px;
+    
+}
+.purple-btn:hover::after{
+    background-color: rgba(255, 255, 255, 0.336);
 }
 
 .utility-container {
@@ -401,6 +509,18 @@ header {
     animation-delay: 0.2s;
     overflow: hidden;
     margin: 10px;
+    animation: thumb 0.5s ease-in 0.3s;
+    transform: scale(0);
+    animation-fill-mode: forwards;
+}
+@keyframes thumb {
+    0% {
+        transform: translateY(-30%) ;
+    }   
+    100% {
+        transform: translateY(0) ;
+    }
+    
 }
 .thumb-text {
     width: 100%;
@@ -473,8 +593,8 @@ header {
         border-radius: 20px 20px 0px 0px;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
+
+
     }
     .bloc-menu {
         width: 80%;
@@ -592,6 +712,5 @@ header {
     }
     
 }
-
 
 }
