--- a/style.css
+++ b/style.css
@@ -125,9 +125,11 @@ header {
 .logo-container {
     display: flex;
     align-items: center;
+    width: 330px;
+    display: flex;
+    justify-content: space-around;
 }
 .logo-img {
-    margin-left: 80px;
     margin-top: 20px;
     margin-bottom: 15px;
 }
@@ -395,7 +397,7 @@ header {
 .fa-arrow-left {
     font-size: xx-large;
     color: #353535;
-    margin-left: 60%;
+    margin-left: -30%;
 }
 .img-background {
     width: 100%;
@@ -613,7 +615,6 @@ header {
     }
     .logo-container {
         justify-content: center;
-        margin-left: -40px;
     }
     .search-title-container{
         flex-direction: column;
@@ -628,6 +629,9 @@ header {
         flex-direction: column;
         justify-content: space-between;
         height: 100%;
+    }
+    .text{
+        margin: 0;
     }
     .menu-container {
         width: 100%;
