--- a/style.css
+++ b/style.css
@@ -313,6 +313,7 @@ header {
     width: 450px;
     height: 200px;
     border-radius: 25px 25px 0px 0px;
+    object-fit: cover;
 }
 .rest-text {
     font-size: larger;
